--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "devDependencies": {
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
 }
