--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,9 @@
 {
-    "extends": "next/core-web-vitals",
-    "rules": {
-        "indent": ["error", 2]
-    }
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "indent": [
+      "error",
+      2
+    ]
+  }
 }
