--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "next": "^13.4.12",
-    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "styled-components": "^6.0.7",
+    "usehooks-ts": "^2.9.1"
   },
   "scripts": {
     "dev": "next dev",
@@ -17,10 +18,14 @@
   "devDependencies": {
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.46.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
