--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "server-only": "^0.0.1",
     "styled-components": "^6.0.7",
     "usehooks-ts": "^2.9.1"
