--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.46.0",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
